--- a/src/br/univali/portugol/plugin/git/JanelaCdigoFonte.form
+++ b/src/br/univali/portugol/plugin/git/JanelaCdigoFonte.form
@@ -81,7 +81,7 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="OK"/>
         <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-          <Color id="Cursor em Forma de M&#xe3;o"/>
+          <Color id="Default Cursor"/>
         </Property>
       </Properties>
       <Events>
