--- a/src/br/univali/portugol/plugin/git/PainelInicial.form
+++ b/src/br/univali/portugol/plugin/git/PainelInicial.form
@@ -123,7 +123,7 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Avan&#xe7;ar"/>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-              <Color id="Cursor em Forma de M&#xe3;o"/>
+              <Color id="Default Cursor"/>
             </Property>
           </Properties>
           <Events>
@@ -134,7 +134,7 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Testar"/>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-              <Color id="Cursor em Forma de M&#xe3;o"/>
+              <Color id="Default Cursor"/>
             </Property>
           </Properties>
           <Events>
